<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="30dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/title_start"
        android:textColor="@color/text_primary"
        android:textSize="38sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_start"
        android:textColor="@color/text_secondary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="260dp"
        android:layout_height="68dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/button_primary"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:stateListAnimator="@animator/button_press"
        android:text="@string/button_start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="normal" />

</RelativeLayout>
